# rust-sdks

livekit-wakeword/: Cargo.toml  build.rs
livekit-wakeword/src/: wakeword.rs
webrtc-sys/: build.rs
webrtc-sys/src/: libstdcxx_stub.cpp
